# Schoology-rs

./: Cargo.toml  README.md
src/: auth.rs  lib.rs  macros.rs  realms.rs
