[package]
name = "schoology"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Schoology Rest API Wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11" }
tokio = { version = "1.0" }
