[package]
name = "schoology"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Schoology Rest API Wrapper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features=["json"]}
tokio = { version = "1.0" }
oauth = { version = "0.6", package = "oauth1-request" }
serde = { version = "1.0.145", features = ["derive"]}
